fix: change responsiveness, spacing and colors

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,4 @@
 :host {
-  --bright-blue: oklch(51.01% 0.274 263.83);
-  --electric-violet: oklch(53.18% 0.28 296.97);
-  --french-violet: oklch(47.66% 0.246 305.88);
-  --vivid-pink: oklch(69.02% 0.277 332.77);
   --hot-red: oklch(61.42% 0.238 15.34);
   --orange-red: oklch(63.32% 0.24 31.68);
 
@@ -16,6 +12,27 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+:host {
+  --color-1: oklch(0.175 0.032 165.0);
+  --color-2: oklch(0.206 0.045 165.0);
+  --color-3: oklch(0.269 0.083 165.0);
+  --color-4: oklch(0.318 0.113 165.0);
+  --color-5: oklch(0.363 0.138 165.0);
+  --color-6: oklch(0.413 0.161 165.0);
+  --color-7: oklch(0.480 0.183 165.0);
+  --color-8: oklch(0.566 0.202 165.0);
+  --color-9: oklch(0.609 0.192 165.0);
+  --color-10: oklch(0.662 0.178 165.0);
+  --color-11: oklch(0.831 0.115 165.0);
+  --color-12: oklch(0.912 0.068 165.0);
+
+  --hunter-green: #386641ff;
+  --sage-green: #6a994eff;
+  --yellow-green: #a7c957ff;
+  --vanilla-cream: #f2e8cfff;
+  --blushed-brick: #bc4749ff;
 }
 
 h1 {
@@ -42,7 +59,6 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
   box-sizing: inherit;
   position: relative;
 }
